удалил pwa исправлен вход

--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
     <!-- GOOGLE SIGN IN -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
-    <!-- --- PWA МЕТА-ТЕГИ --- -->
-    <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#161B22">
-    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
-    <!-- --- КОНЕЦ PWA МЕТА-ТЕГОВ --- -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -86,8 +80,8 @@
             <div class="g_id_signin"
                  data-type="standard"
                  data-shape="rectangular"
-                 data-theme="outline"
-                 data-text="signin_with"
+                 data-theme="filled_black"
+                 data-text="continue_with"
                  data-size="large"
                  data-logo_alignment="left">
             </div>
