--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <button id="login-close-button">&times;</button>
             <h3>Вход в AI Creative Hub</h3>
             <div id="g_id_onload"
-                 data-client_id="ВАШ_GOOGLE_CLIENT_ID.apps.googleusercontent.com"
+                 data-client_id="301140605717-sc4tr9ju4t8bju6l4l282rj0hsj1vclg.apps.googleusercontent.com"
                  data-callback="handleGoogleCredentialResponse"
                  data-auto_prompt="false">
             </div>
