--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <div id="simple-mode-fields" class="form-grid" style="display: none;"><div class="form-group" id="g-song-description-group"><label for="g-song-description">Описание песни</label><textarea id="g-song-description" placeholder="Опишите стиль музыки, тему и настроение..."></textarea><div class="char-counter" id="g-song-description-counter">0/400</div></div></div>
+                            <div id="simple-mode-fields" class="form-grid" style="display: none;">
+                                <div class="form-group" id="g-song-description-group"><label for="g-song-description">Описание песни</label><textarea id="g-song-description" placeholder="Опишите стиль музыки, тему и настроение..."></textarea><div class="char-counter" id="g-song-description-counter">0/400</div></div>
+                                <label class="toggle-switch"><input type="checkbox" id="g-instrumental-simple"><span class="slider"></span><span>Инструментал</span></label>
+                            </div>
                             <div id="custom-mode-fields" class="form-grid">
                                 <div class="form-group"><label for="g-title">Название</label><input type="text" id="g-title" placeholder="Введите название"><div class="char-counter" id="g-title-counter">0/80</div></div>
                                 <div class="form-group">
