кнопка выхода с аккаунта

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
                         <div id="transaction-history" class="transaction-history">
                             <p>Здесь будет отображаться история ваших пополнений и списаний.</p>
                         </div>
+                        <button id="logout-button" class="submit-button">Выйти из аккаунта</button>
                     </div>
                 </div>
             </main>
